--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -5,3 +5,35 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+/* Grid Layout */
+#app {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto minmax(100vh, 1fr) auto;
+    background-color: black;
+}
+
+#app>* {
+    grid-column: 1/-1;
+}
+
+/* scrollbar */
+::-webkit-scrollbar {
+    width: 0.5rem;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #7d7d7d;
+}
+
+/* footer */
+.footer{
+    background-color: white;
+}
+
+/* footer icons */
+.footerI {
+    width: 1.5rem;
+    
+}
