--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -76,6 +76,14 @@
     color: red;
 }
 
+/* inputs in my contact form  */
+input:valid {
+    border: 2px solid green;
+}
+
+input:invalid {
+    border: 2px solid red;
+}
 
 /* footer */
 .footer{
